--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,39 @@
                 input_html: { autocomplete: "new-password" } %>
     <%= f.input :password_confirmation,
                 required: true,
-                input_html: { autocomplete: "new-password" } %>
+                input_html: { autocomplete: "new-password" } %>          
+  </div>
+  <div>
+    <%= f.fields_for :user_details do |form| %>
+      <%= form.input :first_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "first name" }%>
+      <%= form.input :last_name,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "last name" }%>
+      <%= form.input :address_line_1,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "address line 1" }%>
+      <%= form.input :address_line_2,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "address line 2" }%>
+      <%= form.input :suburb,
+                    required: true,
+                    autofocus: true,
+                    input_html: { autocomplete: "Suburb" }%>
+      <%= form.input :state, collection: ["QLD", "NSW", "VIC", "NT", "SA", "WA", "ACT"],
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "State" }%>
+      <%= form.input :postcode,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "Postcode" }%>
+    <% end %>
   </div>
 
   <div class="form-actions">
