--- a/app/views/product_listings/_form.html.erb
+++ b/app/views/product_listings/_form.html.erb
@@ -5,13 +5,13 @@
 
   <div class="form-inputs">
     <%= f.input :name %>
-    <%= f.input :brand %>
+    <%= f.input :brand, collection: ["Louis Vuitton", "Chanel", "Gucci", "Dior", "Hermes", "Prada"] %>
     <%= f.input :description %>
     <%= f.input :price %>
-    <%= f.input :category %>
-    <%= f.input :colour %>
+    <%= f.input :category, collection: ["Shoulder Bag", "Tote", "Clutch"] %>
+    <%= f.input :colour, collection: ["Black","Navy", "White", "Red", "Other"] %>
     <%= f.input :approved %>
-    <%= f.association :user %>
+    <%= f.file_field :image %>
   </div>
 
   <div class="form-actions">
