--- a/app/views/product_listings/index.html.erb
+++ b/app/views/product_listings/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Product Listings</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -12,7 +12,7 @@
       <th>Category</th>
       <th>Colour</th>
       <th>Approved</th>
-      <th>User</th>
+      <th>Image</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -29,13 +29,51 @@
         <td><%= product_listing.approved %></td>
         <td><%= product_listing.user_id %></td>
         <td><%= link_to 'Show', product_listing %></td>
-        <td><%= link_to 'Edit', edit_product_listing_path(product_listing) %></td>
-        <td><%= link_to 'Destroy', product_listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if current_user.id == product_listing.user_id %>
+          <td><%= link_to 'Edit', edit_product_listing_path(product_listing) %></td>
+          <td><%= link_to 'Destroy', product_listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%end%>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
+<% @product_listings.each do |product_listing| %>
+  <div class="row">
+    <div class="card" style="width: 18rem;">
+      <p><%= cl_image_tag(product_listing.image.key, crop: :scale, width: 285, cloud_name: 'ashlii')%></p>
+        <div class="card-body">
+          <h5 class="card-title">
+            <p>
+              <strong>Name:</strong>
+              <%= product_listing.name %>
+            </p>
+            <p>
+              <strong>Brand:</strong>
+              <%= product_listing.brand %>
+            </p></h5>
+          <p class="card-text">
+            <p>
+              <strong>Description:</strong>
+              <%= product_listing.description %>
+            </p>
+            <p>
+              <strong>Price:</strong>
+              $<%= product_listing.price %>
+            </p>
+          
+            <p>
+              <strong>Category:</strong>
+              <%= product_listing.category %>
+            </p>
+
+            <p>
+              <strong>Colour:</strong>
+              <%= product_listing.colour %>
+            </p>
+          
+        </div>
+<%end%>
 
 <%= link_to 'New Product Listing', new_product_listing_path %>
