--- a/app/views/product_listings/index.html.erb
+++ b/app/views/product_listings/index.html.erb
@@ -1,79 +1,46 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Product Listings</h1>
+<h1>Wardrobe</h1>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Brand</th>
-      <th>Description</th>
-      <th>Price</th>
-      <th>Category</th>
-      <th>Colour</th>
-      <th>Approved</th>
-      <th>Image</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @product_listings.each do |product_listing| %>
-      <tr>
-        <td><%= product_listing.name %></td>
-        <td><%= product_listing.brand %></td>
-        <td><%= product_listing.description %></td>
-        <td><%= product_listing.price %></td>
-        <td><%= product_listing.category %></td>
-        <td><%= product_listing.colour %></td>
-        <td><%= product_listing.approved %></td>
-        <td><%= product_listing.user_id %></td>
-        <td><%= link_to 'Show', product_listing %></td>
-        <% if current_user.id == product_listing.user_id %>
-          <td><%= link_to 'Edit', edit_product_listing_path(product_listing) %></td>
-          <td><%= link_to 'Destroy', product_listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <%end%>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 <% @product_listings.each do |product_listing| %>
-  <div class="row">
-    <div class="card" style="width: 18rem;">
-      <p><%= cl_image_tag(product_listing.image.key, crop: :scale, width: 285, cloud_name: 'ashlii')%></p>
-        <div class="card-body">
-          <h5 class="card-title">
-            <p>
-              <strong>Name:</strong>
-              <%= product_listing.name %>
-            </p>
-            <p>
-              <strong>Brand:</strong>
-              <%= product_listing.brand %>
-            </p></h5>
-          <p class="card-text">
-            <p>
-              <strong>Description:</strong>
-              <%= product_listing.description %>
-            </p>
-            <p>
-              <strong>Price:</strong>
-              $<%= product_listing.price %>
-            </p>
+  <% if product_listing.approved == true  %>
+    <div class="row">
+      <div class="card" style="width: 18rem;">
+        <p><%= cl_image_tag(product_listing.image.key, crop: :scale, width: 285, cloud_name: 'ashlii')%></p>
+          <div class="card-body">
+            <h5 class="card-title">
+              <p>
+                <strong>Name:</strong>
+                <%= product_listing.name %>
+              </p>
+              <p>
+                <strong>Brand:</strong>
+                <%= product_listing.brand %>
+              </p></h5>
+            <p class="card-text">
+              <p>
+                <strong>Description:</strong>
+                <%= product_listing.description %>
+              </p>
+              <p>
+                <strong>Price:</strong>
+                $<%= product_listing.price %>
+              </p>
           
-            <p>
-              <strong>Category:</strong>
-              <%= product_listing.category %>
-            </p>
+              <p>
+                <strong>Category:</strong>
+                <%= product_listing.category %>
+              </p>
 
-            <p>
-              <strong>Colour:</strong>
-              <%= product_listing.colour %>
-            </p>
+              <p>
+                <strong>Colour:</strong>
+                <%= product_listing.colour %>
+              </p>
           
-        </div>
+          </div>
+  <%end%>
 <%end%>
+
 
 <%= link_to 'New Product Listing', new_product_listing_path %>
