--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -30,9 +30,12 @@
             <strong>Colour:</strong>
             <%= @product_listing.colour %>
           </p>
-          
-      </div>
-<% if current_user.id == @product_listing.user_id %>
+          <% if current_user.id == @product_listing.user_id %>
   <%= link_to 'Edit', edit_product_listing_path(@product_listing) %>
 <%end%>
-<%= link_to 'Back', product_listings_path %>
+<% if current_user.has_role? :admin %>
+  <%= link_to "Back to Admin View", admin_path, method: :get, class: "nav-link" %>
+<%end%>
+      </div>
+
+  <%= link_to 'Back to Wardrobe', product_listings_path %>
