--- a/app/views/product_listings/index.html.erb
+++ b/app/views/product_listings/index.html.erb
@@ -1,9 +1,9 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Wardrobe</h1>
-
-<% @product_listings.each do |product_listing| %>
-  <div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem;">
+  <% @product_listings.each do |product_listing| %>
+  
     <div class="card-body">
         <% if product_listing.approved == true  %>
           <%= cl_image_tag(product_listing.image.key, crop: :scale, width: 280, cloud_name: 'ashlii')%>
@@ -18,10 +18,6 @@
               </p></h5>
             <p class="card-text">
               <p>
-                <strong>Description:</strong>
-                <%= product_listing.description %>
-              </p>
-              <p>
                 <strong>Price:</strong>
                 $<%= product_listing.price %>
               </p>
@@ -35,12 +31,14 @@
                 <strong>Colour:</strong>
                 <%= product_listing.colour %>
               </p>
+          <%= link_to 'Show', product_listing, class: "btn btn-primary btn-lg" %>
+              
+              <%= link_to "Buy", '/', class:"btn btn-primary btn-lg" %> 
           <%end%>
-          <%= link_to "Buy", '/', class:"btn btn-primary btn-lg" %>   
-
     </div>
-  </div>
-<%end%>
+  
+  <%end%>
+</div>
 
 
 
