--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -3,6 +3,10 @@
     <p><%= cl_image_tag(@product_listing.image.key, crop: :scale, width: 285, cloud_name: 'ashlii')%></p>
       <div class="card-body">
         <h5 class="card-title">
+          <% if can? :update, @product_listing %>
+            <strong>This is your listing</strong>
+          <%end%>
+
           <p>
             <strong>Name:</strong>
             <%= @product_listing.name %>
@@ -30,9 +34,8 @@
             <strong>Colour:</strong>
             <%= @product_listing.colour %>
           </p>
-          <% if current_user.id == @product_listing.user_id %>
-          <%= link_to 'Edit', edit_product_listing_path(@product_listing) %>
-          <%end%>
+          <% if can? :update, @product_listing %><%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
+          <%end%>          
           <% if current_user.has_role? :admin %>
             <%= link_to "Back to Admin View", admin_path, method: :get, class: "nav-link" %>
           <%end%>
