added card to about page

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,15 @@
-<h1>About</h1>
+<h4>About</h4>
 
-<p>Write info here about the general gist of the website</p>
+<div class="card mb-3">
+    <img src="https://images.unsplash.com/photo-1592840054664-6bc0f6fbc3d6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1112&q=80" class="card-img-top" alt="girl walking with bag">
+    <div class="card-body">
+      <h5 class="card-title">Who are we?</h5>
+      <p class="card-text">
+          Welcome and thank you for making the choice to purchase pre-loved luxury.
+          
+      </p>
+      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    </div>
+  </div>
 
 <%= link_to 'To Wardrobe', product_listings_path %>
