--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -34,6 +34,12 @@
             <strong>Colour:</strong>
             <%= @product_listing.colour %>
           </p>
+          <%= form_with model: @order_item do |f| %>
+          <%= f.hidden_field :product_listing_id, value: @product_listing.id %>
+          <%= f.number_field :quantity, value: 1, min: 1 %>
+          <%= f.submit "Add to cart" %>
+          <% end %> 
+          
           <% if can? :update, @product_listing %><%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
           <%end%>          
           <% if current_user.has_role? :admin %>
