--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -36,9 +36,10 @@
           </p>
           <%= form_with model: @order_item do |f| %>
           <%= f.hidden_field :product_listing_id, value: @product_listing.id %>
-          <%= f.number_field :quantity, value: 1, min: 1 %>
+          <%= f.number_field :quantity, value: 1, max: 1 %>
           <%= f.submit "Add to cart" %>
           <% end %> 
+          <%= link_to "View Cart", cart_path, method: :get, class: "nav-link" %>
           
           <% if can? :update, @product_listing %><%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
           <%end%>          
