--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
                 input_html: { autocomplete: "new-password" } %>          
   </div>
   <div>
-    <%= f.fields_for :user_details do |form| %>
+    <%= f.fields_for :user_detail, UserDetail.new do |form| %>
       <%= form.input :first_name,
                     required: true,
                     autofocus: true,
@@ -26,26 +26,34 @@
                     required: true,
                     autofocus: true,
                     input_html: { autocomplete: "last name" }%>
+      <%= form.input :contact_number,
+                    required: true,
+                    autofocus: true,
+                      input_html: { autocomplete: "contact number" }%>
       <%= form.input :address_line_1,
                     required: true,
                     autofocus: true,
                     input_html: { autocomplete: "address line 1" }%>
       <%= form.input :address_line_2,
-                    required: true,
                     autofocus: true,
                     input_html: { autocomplete: "address line 2" }%>
       <%= form.input :suburb,
                     required: true,
                     autofocus: true,
                     input_html: { autocomplete: "Suburb" }%>
-      <%= form.input :state, collection: ["QLD", "NSW", "VIC", "NT", "SA", "WA", "ACT"],
+          <%= f.fields_for :state do |form| %>
+              <%= form.input :state, collection: ["QLD", "NSW", "VIC", "NT", "SA", "WA", "ACT"],
                       required: true,
                       autofocus: true,
                       input_html: { autocomplete: "State" }%>
-      <%= form.input :postcode,
-                      required: true,
-                      autofocus: true,
-                      input_html: { autocomplete: "Postcode" }%>
+                <%= f.fields_for :postcode do |form| %>
+                    <%= form.input :postcode,
+                                    required: true,
+                                    autofocus: true,
+                                    input_html: { autocomplete: "Postcode" }%>
+                <% end %>
+                                    
+          <% end %>
     <% end %>
   </div>
 
