--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -3,7 +3,7 @@
     <p><%= cl_image_tag(@product_listing.image.key, crop: :scale, width: 285, cloud_name: 'ashlii')%></p>
       <div class="card-body">
         <h5 class="card-title">
-          <% if can? :update, @product_listing %>
+          <% if current_user.id == @product_listing.user_id %>
             <strong>This is your listing</strong>
           <%end%>
 
@@ -41,7 +41,8 @@
           <% end %> 
           <%= link_to "View Cart", cart_path, method: :get, class: "nav-link" %>
           
-          <% if can? :update, @product_listing %><%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
+          <% if can? :update, @product_listing %>
+          <%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
           <%end%>          
           <% if current_user.has_role? :admin %>
             <%= link_to "Back to Admin View", admin_path, method: :get, class: "nav-link" %>
