added users to admin view

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,4 +12,4 @@
     </div>
   </div>
 
-<%= link_to 'To Wardrobe', product_listings_path %>
+<%= link_to 'To Wardrobe', product_listings_path, class:"btn btn-primary btn-lg" %>
