--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -38,5 +38,38 @@
   </tbody>
 </table>
 
+<h1>Users</h1>
+<table class="table">
+    <thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Contact Number</th>
+        <th>Address</th>
+        <th>Suburb</th>
+        <th>State</th>
+        <th>Postcode</th>
+        <th>User</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+  
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.first_name %></td>
+          <td><%= user.last_name %></td>
+          <td><%= user.contact_number %></td>
+          <td><%= user.address_line_1 %></td>
+          <td><%= user.suburb %></td>
+          <td><%= user.state %></td>
+          <td><%= user.postcode %></td>
+          <td><%= user.user_id %></td>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
 <br>
 <%= link_to 'Back to Wardrobe', product_listings_path %>
