added formatting to cart

--- a/app/views/order_items/create.html.erb
+++ b/app/views/order_items/create.html.erb
@@ -1,1 +1,2 @@
+<!-- rendering the partial and creating the page without refreshing -->
 <script>$("#cart").html("<%= j render 'cart/cart' %>)");</script>
