--- a/app/views/order_items/update.html.erb
+++ b/app/views/order_items/update.html.erb
@@ -1,2 +1,3 @@
+<!-- rendering the partial and updating the page without refreshing -->
 <script>$("#cart").html("<%= j render 'cart/cart' %>");
     $("#cart-item").html("<%= j render 'cart/cart_items' %>");</script>
