--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -45,7 +45,8 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Contact Number</th>
-        <th>Address</th>
+        <th>Street Number</th>
+        <th>Street Name</th>
         <th>Suburb</th>
         <th>State</th>
         <th>Postcode</th>
@@ -61,6 +62,7 @@
           <td><%= user.last_name %></td>
           <td><%= user.contact_number %></td>
           <td><%= user.address_line_1 %></td>
+          <td><%= user.address_line_2 %></td>
           <td><%= user.suburb %></td>
           <td><%= user.state %></td>
           <td><%= user.postcode %></td>
