--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -11,52 +11,59 @@
     <% end %>
 
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>          
-  </div>
-  <div>
-    <%= f.fields_for :user_details do |form| %>
-      <%= form.input :first_name,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "first name" }%>
-      <%= form.input :last_name,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "last name" }%>
-      <%= form.input :address_line_1,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "address line 1" }%>
-      <%= form.input :address_line_2,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "address line 2" }%>
-      <%= form.input :suburb,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "Suburb" }%>
-      <%= form.input :state,
+    <%= f.error_notification %>
+  
+    <div class="form-inputs">
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email" }%>
+      <%= f.input :password,
+                  required: true,
+                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+                  required: true,
+                  input_html: { autocomplete: "new-password" } %>          
+    </div>
+    <div>
+      <%= f.fields_for :user_details do |form| %>
+        <%= form.input :first_name,
                       required: true,
                       autofocus: true,
-                      input_html: { autocomplete: "State" }%>
-      <%= form.input :postcode,
+                      input_html: { autocomplete: "first name" }%>
+        <%= form.input :last_name,
                       required: true,
                       autofocus: true,
-                      input_html: { autocomplete: "Postcode" }%>
-    <% end %>
+                      input_html: { autocomplete: "last name" }%>
+        <%= form.input :contact_number,
+                      required: true,
+                      autofocus: true,
+                        input_html: { autocomplete: "contact number" }%>
+        <%= form.input :address_line_1,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "address line 1" }%>
+        <%= form.input :address_line_2,
+                      autofocus: true,
+                      input_html: { autocomplete: "address line 2" }%>
+        <%= form.input :suburb,
+                      required: true,
+                      autofocus: true,
+                      input_html: { autocomplete: "Suburb" }%>
+        <%= form.input :state, collection: ["QLD", "NSW", "VIC", "NT", "SA", "WA", "ACT"],
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "State" }%>
+        <%= form.input :postcode,
+                        required: true,
+                        autofocus: true,
+                        input_html: { autocomplete: "Postcode" }%>
+    
+      <% end %>
+                                      
+    </div>
+  <% end %>
   </div>
 
   <div class="form-actions">
