--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -1,4 +1,6 @@
-<h1>Product Listings</h1>
+<h1>Dashboard</h1>
+
+<h2>Product Listings</h2>
 
 <table class="table">
   <thead>
@@ -38,7 +40,7 @@
   </tbody>
 </table>
 
-<h1>Users</h1>
+<h2>Users</h2>
 <table class="table">
     <thead>
       <tr>
@@ -51,6 +53,7 @@
         <th>State</th>
         <th>Postcode</th>
         <th>User</th>
+        <th>Role</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -67,7 +70,9 @@
           <td><%= user.state %></td>
           <td><%= user.postcode %></td>
           <td><%= user.user_id %></td>
-
+          <td><%= user.user_id %></td>
+          <td><%= link_to 'Edit', user_registration_path, method: :patch %></td>
+          <td><%= link_to 'Destroy', '/users', method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
     </tbody>
