--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -34,15 +34,26 @@
             <strong>Colour:</strong>
             <%= @product_listing.colour %>
           </p>
-          <%= form_with model: @order_item do |f| %>
-          <%= f.hidden_field :product_listing_id, value: @product_listing.id %>
-          <%= f.number_field :quantity, value: 1, min: 0, max: 1 %>
-          <%= f.submit "Add to cart", class: "nav-link" %>
-          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-basket-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M5.071 1.243a.5.5 0 0 1 .858.514L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-.5.5H15v5a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V9H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 6h1.717L5.07 1.243zM3.5 10.5a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3zm2.5 0a.5.5 0 1 0-1 0v3a.5.5 0 0 0 1 0v-3z"/>
-          </svg>
-          <% end %> 
-          <%= link_to "View Cart", cart_path, method: :get, class: "nav-link" %>
+          <p><button id="buynow-button" class="btn btn-primary btn-lg">Buy</button></p> 
+
+          <script src="https://js.stripe.com/v3/"></script>
+          
+          <script>
+              const stripe = Stripe('<%= ENV["STRIPE_PUBLISHABLE_KEY"] %>')
+              const buyButton = document.getElementById("buynow-button")
+          
+              buyButton.addEventListener('click', function(){
+                  fetch('<%= buy_path(@product_listing.id) %>', { 
+                      method: 'POST'
+                      })
+                      .then(function(response){
+                          return response.json()
+                      })
+                      .then(function(session){
+                          return stripe.redirectToCheckout ({ sessionId: session.id })
+                      })
+              })
+          </script>
           
           <% if can? :update, @product_listing %>
           <%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
