css sheets added and views for stripe

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,5 +2,7 @@
  @import "bootstrap";
  @import "cards";
  @import "about";
- @import "landingpage"
+ @import "landingpage";
+ @import "product_listings";
+
 
