--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,4 +1,8 @@
+.card{
+    display: flex;
+    
 
+}
 .card-body {
     padding: 0.5em;
 }
@@ -7,7 +11,5 @@ img{
     padding-right: 0.7em;
 }
 
-.card{
-    margin: 0;
-}
+
 
