--- a/app/assets/stylesheets/product_listings.scss
+++ b/app/assets/stylesheets/product_listings.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the ProductListings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.row{
+    flex-direction: row;
+    justify-content: center;
+}
