--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -1,8 +1,9 @@
-<div class="row">
+
   <div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title">
     <p><%= cl_image_tag(@product_listing.image.key, crop: :scale, width: 285, cloud_name: 'ashlii')%></p>
-      <div class="card-body">
-        <h5 class="card-title">
+      
           <% if current_user.id == @product_listing.user_id %>
             <strong>This is your listing</strong>
           <%end%>
@@ -58,9 +59,10 @@
           <% if can? :update, @product_listing %>
           <%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
           <%end%>          
-          <% if current_user.has_role? :admin %>
-            <%= link_to "Back to Admin View", admin_path, method: :get, class: "nav-link" %>
-          <%end%>
-</div>
 
-  <%= link_to 'Back to Wardrobe', product_listings_path %>
+  </div>
+</div>
+<% if current_user.has_role? :admin %>
+<%= link_to "Back to Admin View", admin_path%>
+<%end%>
+<%= link_to 'Back to Wardrobe', product_listings_path %>
