added users to admin view, added user details and listings to profile view and changed flex box on index product listins

--- a/app/assets/stylesheets/landingpage.scss
+++ b/app/assets/stylesheets/landingpage.scss
@@ -1,3 +1,17 @@
 .jumbotron{
-    background-color: rgb(212, 200, 190);
+    background-color: rgb(45, 45, 43);
+}
+.display-4 {
+    color: whitesmoke;
+}
+.lead {
+    color: whitesmoke;
+}
+.btn-primary {
+    background-color: whitesmoke;
+    color: rgb(45, 45, 43);
+    border-color: whitesmoke;
+}
+a{
+    color: rgb(45, 45, 43);
 }
