--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,6 +6,8 @@
       <h5 class="card-title">Who are we?</h5>
       <p class="card-text">
           Welcome and thank you for making the choice to purchase pre-loved luxury.
+          We are a market place that prides itself on providing the opportunity for everyone to purchase luxury items and not feel bad about it.
+          
           
       </p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
