--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -9,8 +9,6 @@
       <th>Brand</th>
       <th>Description</th>
       <th>Price</th>
-      <th>Category</th>
-      <th>Colour</th>
       <th>Approved</th>
       <th>Image</th>
       <th>User</th>
@@ -25,8 +23,6 @@
         <td><%= product_listing.brand %></td>
         <td><%= product_listing.description %></td>
         <td><%= product_listing.price %></td>
-        <td><%= product_listing.category %></td>
-        <td><%= product_listing.colour %></td>
         <td><%= product_listing.approved %></td>
         <td><%= cl_image_tag(product_listing.image.key, crop: :scale, width: 100, cloud_name: 'ashlii')%></td>
         <td><%= product_listing.user_id %></td>
@@ -53,13 +49,15 @@
         <th>State</th>
         <th>Postcode</th>
         <th>User</th>
-        <th>Role</th>
+        <th>Email</th>
         <th colspan="3"></th>
       </tr>
     </thead>
   
     <tbody>
-      <% @users.each do |user| %>
+
+
+      <% @details.each do |user| %>
         <tr>
           <td><%= user.first_name %></td>
           <td><%= user.last_name %></td>
@@ -70,7 +68,7 @@
           <td><%= user.state %></td>
           <td><%= user.postcode %></td>
           <td><%= user.user_id %></td>
-          <td><%= user.user_id %></td>
+          <td><%= user.user.email %></td>
           <td><%= link_to 'Edit', user_registration_path, method: :patch %></td>
           <td><%= link_to 'Destroy', '/users', method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
