--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,6 +1,78 @@
 <h1>Profile</h1>
 
+<table class="table">
+    <thead>
+      <tr>
+          <th>Email</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Contact Number</th>
+        <th>Street Number</th>
+        <th>Street Name</th>
+        <th>Suburb</th>
+        <th>State</th>
+        <th>Postcode</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+  
+    <tbody>
+     
+        <tr>
+          <td><%= @profile.email%></td>
+          <td><%= @profile.user_detail.first_name%></td>
+          <td><%= @profile.user_detail.last_name%></td>
+          <td><%= @profile.user_detail.contact_number%></td>
+          <td><%= @profile.user_detail.address_line_1%></td>
+          <td><%= @profile.user_detail.address_line_2%></td>
+          <td><%= @profile.user_detail.suburb%></td>
+          <td><%= @profile.user_detail.state%></td>
+          <td><%= @profile.user_detail.postcode%></td>
 
+          <td><%= link_to 'Edit', user_registration_path, method: :patch %></td>
+          <td><%= link_to 'Destroy', '/users', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+    
+    </tbody>
+  </table>
+
+  <h2>My Listings</h2>
+
+<table class="table">
+  <thead>
+    <tr>
+      <th>Name</th>
+      <th>Brand</th>
+      <th>Description</th>
+      <th>Price</th>
+      <th>Approved</th>
+      <th>Image</th>
+      <th>User</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @listing.each do |product_listing| %>
+      <tr>
+        <td><%= product_listing.name %></td>
+        <td><%= product_listing.brand %></td>
+        <td><%= product_listing.description %></td>
+        <td><%= product_listing.price %></td>
+        <td><%= product_listing.approved %></td>
+        <td><%= cl_image_tag(product_listing.image.key, crop: :scale, width: 100, cloud_name: 'ashlii')%></td>
+        <td><%= product_listing.user_id %></td>
+        <td><%= link_to 'Show', product_listing %></td>
+        <td><%= link_to 'Edit', edit_product_listing_path(product_listing) %></td>
+        <td><%= link_to 'Destroy', product_listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+<%= link_to 'Back to Wardrobe', product_listings_path %>
 
 
 
