--- a/app/views/product_listings/index.html.erb
+++ b/app/views/product_listings/index.html.erb
@@ -51,4 +51,4 @@
 
 </div>
 
-<%= link_to 'New Product Listing', new_product_listing_path %>
+<%= link_to 'New Product Listing', new_product_listing_path, class: "btn btn-primary" %>
