changed default images for seeded listings

--- a/app/views/product_listings/_form.html.erb
+++ b/app/views/product_listings/_form.html.erb
@@ -20,6 +20,6 @@
   You will be contacted in the event of issue.
 </p>
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, class: "btn btn-primary" %>
   </div>
 <% end %>
