--- a/app/views/product_listings/cancel.html.erb
+++ b/app/views/product_listings/cancel.html.erb
@@ -1,2 +1,2 @@
 <h2>Cancelled</h2>
-  <%= link_to 'Back to Wardrobe', product_listings_path %>
+  <%= link_to 'Back to Wardrobe', product_listings_path, class: "btn btn-primary" %>
