--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,13 @@
-<h4>About</h4>
+<h2>About Us</h2>
 
 <div class="card mb-3">
-    <img src="https://images.unsplash.com/photo-1592840054664-6bc0f6fbc3d6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1112&q=80" class="card-img-top" alt="girl walking with bag">
+    <img src=<%= asset_path ("chanel_bags.jpg") %> class="card-img-top" alt="chanel bags">
     <div class="card-body">
       <h5 class="card-title">Who are we?</h5>
       <p class="card-text">
           Welcome and thank you for making the choice to purchase pre-loved luxury.
-          We are a market place that prides itself on providing the opportunity for everyone to purchase luxury items and not feel bad about it.
+          We are a market place that prides itself on providing the opportunity for everyone to purchase luxury items and not feel bad about it!
+
           
           
       </p>
@@ -15,3 +16,15 @@
   </div>
 
 <%= link_to 'To Wardrobe', product_listings_path, class:"btn btn-primary btn-lg" %>
+
+<div>
+  <h2>About Us</h2>
+  <img src=<%= asset_path ("chanel_bags.jpg") %> class="about-img" alt="chanel bags">
+  <p>
+    Welcome and thank you for making the choice to purchase pre-loved luxury.
+    We are a market place that prides itself on providing the opportunity for everyone to purchase luxury items and not feel bad about it!
+
+  </p>
+
+
+</div>
