--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,19 @@
 <h1>Contact Us</h1>
 
-<p>Put contact us form here</p>
+<div class="container-contact">
+    <form id="contact" action="https://formspree.io/f/mknpzjal" method="post">
+      <br>
+      <fieldset>
+        <input name="Name" placeholder="Your name" type="text" required autofocus>
+      </fieldset>
+      <fieldset>
+        <input name="Email" placeholder="Your Email Address" type="email-2" required>
+      </fieldset>
+      <fieldset>
+        <textarea name="Message" placeholder="Type your message here...." required></textarea>
+      </fieldset>
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+<form
+  
