--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -9,6 +9,8 @@
       <div class="navbar-nav">
         <a class="nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
         <a class="nav-link active" href="/pages/about">About <span class="sr-only">(current)</span></a>
+        <a class="nav-link active" href="/pages/contact">Contact Us <span class="sr-only">(current)</span></a>
+
 
         
         <% if user_signed_in? %>
