--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -2,7 +2,7 @@
 
 <h2>Product Listings</h2>
 
-<table class="table">
+<table class="table table-striped table-dark">
   <thead>
     <tr>
       <th>Name</th>
@@ -37,7 +37,7 @@
 </table>
 
 <h2>Users</h2>
-<table class="table">
+<table class="table table-striped">
     <thead>
       <tr>
         <th>First Name</th>
