added r18 to readme.md

--- a/app/views/product_listings/_form.html.erb
+++ b/app/views/product_listings/_form.html.erb
@@ -16,8 +16,8 @@
     <p>Please upload multiple images including authenticity tags</p>
     <%= f.file_field :image %>
   </div>
-<p>Please note submissions may take up to 2 working days to be processed.
-  You will be contacted in the event of issue.
+<p><strong>Please note submissions may take up to 2 working days to be processed.
+  You will be contacted in the event of issue.</strong>
 </p>
   <div class="form-actions">
     <%= f.button :submit, class: "btn btn-primary" %>
