--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -35,12 +35,13 @@
             <strong>Colour:</strong>
             <%= @product_listing.colour %>
           </p>
+          <% if can? :read, @product_listing %>
           <p><button id="buynow-button" class="btn btn-primary btn-lg">Buy</button></p> 
 
           <script src="https://js.stripe.com/v3/"></script>
           
           <script>
-              const stripe = Stripe('<%= ENV["STRIPE_PUBLISHABLE_KEY"] %>')
+              const stripe = Stripe('<%= "pk_test_51HgT8YJbyxCSQYdE4l0MaYN82EuEjZP0DJVFh5mXTbuhRmfKGnMfuc4zGtRQRkmKqnmKg9qEnFVEn2HAGoXZyRjB00HoQriWDi" %>')
               const buyButton = document.getElementById('buynow-button')
           
               buyButton.addEventListener('click', function(){
@@ -55,6 +56,7 @@
                       })
               })
           </script>
+          <% end %>
           
           <% if can? :update, @product_listing %>
           <%= link_to 'Edit', edit_product_listing_path(@product_listing)%>
