--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -41,7 +41,7 @@
           <script src="https://js.stripe.com/v3/"></script>
           
           <script>
-              const stripe = Stripe('<%= "pk_test_51HgT8YJbyxCSQYdE4l0MaYN82EuEjZP0DJVFh5mXTbuhRmfKGnMfuc4zGtRQRkmKqnmKg9qEnFVEn2HAGoXZyRjB00HoQriWDi" %>')
+              const stripe = Stripe('<%= ENV["STRIPE_PUBLISHABLE_KEY"] %>')
               const buyButton = document.getElementById('buynow-button')
           
               buyButton.addEventListener('click', function(){
