changed contact form

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,5 +17,11 @@
       <p class="alert"><%= alert %></p>
     <%= yield %>
   </div>
+  <footer> 
+    <p>
+      Luxe Ethique©2020 
+    </p>
+    </footer>
+ 
   </body>
 </html>
