--- a/app/views/product_listings/show.html.erb
+++ b/app/views/product_listings/show.html.erb
@@ -65,6 +65,6 @@
   </div>
 </div>
 <% if current_user.has_role? :admin %>
-<%= link_to "Back to Admin View", admin_path%>
+<%= link_to "Back to Admin View", admin_path, class:"btn btn-primary"%>
 <%end%>
-<%= link_to 'Back to Wardrobe', product_listings_path %>
+<%= link_to 'Back to Wardrobe', product_listings_path, class:"btn btn-primary" %>
