attempted to give permission for users to buy, still ot functional, changed landing page title

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
+<h4 class="title">Luxe Ethique</h4>
 <div class="row">
     <div class="col-md-8">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">Luxe Ethique</h1>
                 <p class="lead">The place to find luxury bags and purchase ethically</p>
                 <%= link_to "Shop", product_listings_path, class:"btn btn-primary btn-lg" %>   
                 <%= link_to "List Bag", new_product_listing_path, class:"btn btn-primary btn-lg" %>
