--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,6 +3,7 @@
     <div class="col-md-8">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
+                <h4 class="title">Luxe Ethique</h4>
                 <p class="lead">The place to find luxury bags and purchase ethically</p>
                 <%= link_to "Shop", product_listings_path, class:"btn btn-primary btn-lg" %>   
                 <%= link_to "List Bag", new_product_listing_path, class:"btn btn-primary btn-lg" %>
