--- a/app/views/product_listings/index.html.erb
+++ b/app/views/product_listings/index.html.erb
@@ -44,16 +44,10 @@
 
 </div>
 
-
-<%= will_paginate @product_listings %>
 <nav aria-label="Page navigation example">
-  <ul class="pagination">
-    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item"><a class="page-link" href="#">Next</a></li>
-  </ul>
+<%= will_paginate @product_listings, class:"pagination" %>
 </nav>
+
+
 
 <%= link_to 'New Product Listing', new_product_listing_path, class: "btn btn-primary" %>
