--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,9 +3,7 @@
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-  <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-  <% end %>
+
 
   <div class="form-inputs">
     <%= f.input :email,
@@ -19,43 +17,34 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>          
-  </div>
-  <div>
-    <%= f.fields_for :user_details do |form| %>
-      <%= form.input :first_name,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "first name" }%>
-      <%= form.input :last_name,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "last name" }%>
-      <%= form.input :contact_number,
-                    required: true,
-                    autofocus: true,
-                      input_html: { autocomplete: "contact number" }%>
-      <%= form.input :address_line_1,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "address line 1" }%>
-      <%= form.input :address_line_2,
-                    autofocus: true,
-                    input_html: { autocomplete: "address line 2" }%>
-      <%= form.input :suburb,
-                    required: true,
-                    autofocus: true,
-                    input_html: { autocomplete: "Suburb" }%>
-      <%= form.input :state, collection: ["QLD", "NSW", "VIC", "NT", "SA", "WA", "ACT"],
-                      required: true,
-                      autofocus: true,
-                      input_html: { autocomplete: "State" }%>
-      <%= form.input :postcode,
-                      required: true,
-                      autofocus: true,
-                      input_html: { autocomplete: "Postcode" }%>
-  
-    <% end %>
-                                    
+    <%= f.input :first_name,
+                required: true,
+                autofocus: true,
+                input_html: { autocomplete: "first name" }%>
+    <%= f.input :last_name,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "last name" }%>
+    <%= f.input :contact_number,
+                  required: true,
+                  autofocus: true,
+                    input_html: { autocomplete: "contact number" }%>
+    <%= f.input :address,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "address" }%>
+    <%= f.input :suburb,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "Suburb" }%>
+    <%= f.input :state, collection: ["QLD", "NSW", "VIC", "NT", "SA", "WA", "ACT"],
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "State" }%>
+    <%= f.input :postcode,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "Postcode" }%>                                 
   </div>
 
   <div class="form-actions">
