--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -7,7 +7,6 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Contact Number</th>
-        <th>Street Number</th>
         <th>Street Name</th>
         <th>Suburb</th>
         <th>State</th>
@@ -17,13 +16,12 @@
     </thead>
   
     <tbody>
-     
         <tr>
           <td><%= @profile.email%></td>
           <td><%= @profile.first_name%></td>
           <td><%= @profile.last_name%></td>
           <td><%= @profile.contact_number%></td>
-          <td><%= @profile.address_line%></td>
+          <td><%= @profile.address%></td>
           <td><%= @profile.suburb%></td>
           <td><%= @profile.state%></td>
           <td><%= @profile.postcode%></td>
@@ -64,7 +62,6 @@
         <td><%= link_to 'Edit', edit_product_listing_path(product_listing) %></td>
         <% end %>
         <td><%= link_to 'Destroy', product_listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      
       </tr>
     <% end %>
   </tbody>
