created partial for product show card and ability for admin to see nav links

--- a/app/views/payments/success.html.erb
+++ b/app/views/payments/success.html.erb
@@ -5,6 +5,8 @@
     Thank you for your purchase!
     We will be in contact with you shortly
   </p>
+
+  <%= render 'partials/productlistings' %> 
   
   <%= link_to 'Back to Wardrobe', product_listings_path, class: "btn btn-primary" %>
 </div>
