changed partial render to form to remove buy button for success

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -106,4 +106,4 @@
   </table>
 
 
-<%= link_to 'Back to Wardrobe', product_listings_path %>
+<%= link_to 'Back to Wardrobe', product_listings_path, class:"btn btn-primary" %>
