--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -34,7 +34,7 @@
 </table>
 
 <br>
-<%= link_to 'Back to Wardrobe', product_listings_path %>
+<%= link_to 'Back to Wardrobe', product_listings_path, class:"btn btn-primary" %>
 
 
 
