added more content to readme, corrected table issue

--- a/app/views/pages/admin.html.erb
+++ b/app/views/pages/admin.html.erb
@@ -46,8 +46,7 @@
         <th>First Name</th>
         <th>Last Name</th>
         <th>Contact Number</th>
-        <th>Street Number</th>
-        <th>Street Name</th>
+        <th>Street</th>
         <th>Suburb</th>
         <th>State</th>
         <th>Postcode</th>
